--- a/apps/deezer-front/index.html
+++ b/apps/deezer-front/index.html
@@ -5,8 +5,10 @@
 		<link rel="icon" href="src/assets/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link rel="stylesheet" href="/src/assets/reset.css" />
+		<link rel="stylesheet" href="./src/assets/reset.css" />
 		<title>10heures</title>
+
+		<script src="https://kit.fontawesome.com/834a2a8e7b.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div id="app"></div>
